added post mapping

--- a/week9/src/main/resources/application.properties
+++ b/week9/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.password=1ronh@ck
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
+server.error.include-stacktrace=never
 
 spring.jpa.show-sql=true
