put, patch, delete

--- a/week9/src/main/resources/application.properties
+++ b/week9/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
 server.error.include-stacktrace=never
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
 
 spring.jpa.show-sql=true
