added tests for controllers

--- a/week9/src/main/resources/application-test.properties
+++ b/week9/src/main/resources/application-test.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/products?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/products_test?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Hotel.2023!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 server.error.include-stacktrace=never
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
